--- a/index.html
+++ b/index.html
@@ -5,21 +5,71 @@
     </head>
     <body>
         <div>
-            <form>
-                <img alt="Google" id="google-logo" height=28 src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
-                <input class="search-bar" type="text">
-                <button class="search-bar" type="submit">Search</button>
-            </form>
+            <div>
+                <form>
+                    <img alt="Google" id="google-logo" height=28 src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+                    <input class="search-bar" type="text">
+                    <button class="search-bar" type="submit">Search</button>
+                </form>
+            </div>
+            <div class="nav-bar">
+                <a href="#">All</a>
+                <a href="#">News</a>
+                <a href="#">Maps</a>
+                <a href="#">Videos</a>
+                <a href="#">Shopping</a>
+                <a href="#">More</a>
+                <a href="#">Settings</a>
+                <a href="#">Tools</a>
+            </div>
         </div>
-        <div class="nav-bar">
-            <a href="#">All</a>
-            <a href="#">News</a>
-            <a href="#">Maps</a>
-            <a href="#">Videos</a>
-            <a href="#">Shopping</a>
-            <a href="#">More</a>
-            <a href="#">Settings</a>
-            <a href="#">Tools</a>
+        <div class="results">
+            <a href="#">
+                <cite>www.wix.com/</cite>
+                <h2>Build Your Own Webpage | Create Your Own New Website</h2>
+            
+                <p>
+                    Easy to Use, Online Website Builder. Customizable online store. Traffic generation tools. 
+                    Market leaders. 100s of Apps. Social media compatible. 1000s of free images. Custom domain name. 
+                    Easy drag n’ drop. Multiple payment methods. Mobile optimized.
+                </p>
+            </a>
         </div>
+        <div class="results">
+            <a href="#">
+                <cite>christine-27.github.io › google-homepage</cite>
+                <h2>build this webpage - GitHub Pages</h2>
+                <p>
+                    TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE CLICK INSTALLATION: Log in to your hosting account. Go to your control panel. Look for the “WordPress” or “Website” icon. Choose the domain where you want to install your website.
+                </p>
+            </a>
+        </div>
+        <div class="results">
+            <a href="#">
+                <cite>arstechnica.com › information-technology › 2013/07</cite>
+                <h2>With zero coding experience, artist building 180 webpages in ...</h2>
+                <p>
+                    Jul 26, 2013 - One of Jennifer Dewalt's creations, this webpage lets visitors create paintings in ... Build a different website every day for 180 consecutive days.
+                </p>
+            </a>
+        </div>
+        <div class="results">
+            <a href="#">
+                <cite>www.websitebuilderexpert.com › building-websites</cite>
+                <h2>How to Build a Website 2020 | The Complete Beginner's Guide</h2>
+                <p>
+                    How to Build a Website: the Step-by-Step Guide to Easy Setup. We'll look at how to make a website with both a website builder and WordPress, with no steps left ...
+                </p>
+            </a>
+        </div>
+        <div class="results">
+            <a href="#">
+                <cite>www.pcmag.com › ... › Web Hosting</cite>
+                <h2>How to Create a Website | PCMag</h2>
+                <p>
+                    If you need to quickly build a simple website, starting with a blogging service is a great way to go. The major player in the blog game is WordPress, a content ...
+                </p>
+            </a>
+        </div> 
     </body>  
 </html>
